--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,7 +2,7 @@
 applications:
   - name: pal-tracker
     path: build/libs/pal-tracker.jar
-    random-route: true
+    routes:
+      - route: pal-tracker-kannangnatt.apps.evans.pal.pivotal.io
     env:
-      WELCOME_MESSAGE: Hello from Cloud Foundry
-      JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
+      WELCOME_MESSAGE: Hello from the review environment
